src/test/deca/context/invalid/test_incorrect_field.deca
// Description:
//    Programme verifiant qu'il est impossible de déclarer un champ de type void
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 15
//
// Historique:
//    cree le 22/01/2021

class A  {
	void x ;
}
